# Nenuphar

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  NPBuild.toml  Setup.bat
Source/BuildTool/Analysis/: CMakeLists.txt
Source/BuildTool/Generator/: CMakeLists.txt
Source/BuildTool/NPBuild/: CMakeLists.txt  NPBuild.fsproj  Program.fs
Source/BuildTool/NPBuild/Private/NPBuild/: NPBuild.cpp
Source/Engine/ApplicationCore/: ApplicationCore.Build.xml  CMakeLists.txt  NPBuild.toml
Source/Engine/ApplicationCore/Private/: Application.cpp  ApplicationCore.cpp  EntryApplication.cpp  PlaftormApplication.cpp  Window.cpp  WindowBase.cpp  WindowInteface.cpp
Source/Engine/ApplicationCore/Private/Nenuphar/ApplicationCore/: Application.cpp  ApplicationImpl.cpp  ApplicationImpl.hpp  Clock.cpp  PlaftormApplication.cpp  Window.cpp  WindowBase.cpp
Source/Engine/ApplicationCore/Private/Windows/: WindowsApplication.cpp  WindowsWindow.cpp
Source/Engine/ApplicationCore/Public/ApplicationCore/: ApplicationCore.hpp
Source/Engine/ApplicationCore/Public/Nenuphar/: ApplicationCore.hpp
Source/Engine/ApplicationCore/Public/Nenuphar/ApplicationCore/: Application.hpp  ApplicationCore.hpp  ApplicationMessageHandler.hpp  Clock.hpp  EntryApplication.hpp  EntryPoint.hpp  PlatformApplication.hpp  Window.hpp  WindowBase.hpp  WindowDefinition.hpp  WindowInterface.hpp  WindowSignals.hpp
Source/Engine/Asset/: CMakeLists.txt
Source/Engine/Asset/Private/Nenuphar/Asset/: Asset.cpp  AssetLoader.cpp  AssetRegistry.cpp
Source/Engine/Asset/Public/Nenuphar/Asset/: Asset.hpp  AssetLoader.hpp  AssetRegistry.hpp
Source/Engine/Asset/Test/: AssetRegistryTest.cpp
Source/Engine/Assets/: CMakeLists.txt
Source/Engine/Assets/Private/Nenuphar/Assets/: Assets.cpp
Source/Engine/Assets/Public/Nenuphar/Assets/: Assets.hpp
Source/Engine/Common/: CMakeLists.txt
Source/Engine/Common/Private/Logger/: ConsoleColor.cpp  Logger.cpp
Source/Engine/Common/Public/Nenuphar/: Common.hpp
Source/Engine/Common/Public/Nenuphar/Common/: Common.hpp  Functional.hpp  Instanciate.hpp
Source/Engine/Common/Test/: FunctionalTest.cpp  ResultTest.cpp  SparseSetTest.cpp
Source/Engine/Core/: CMakeLists.txt  Core.Build.toml  Core.Build.xml  NPBuild.toml
Source/Engine/Core/Private/: Core.cpp  Engine.cpp  LoopEngine.cpp
Source/Engine/Core/Private/Logger/: ConsoleColor.cpp  Logger.cpp
Source/Engine/Core/Private/Nenuphar/Core/: Core.cpp  Engine.cpp
Source/Engine/Core/Public/Core/: Core.hpp
Source/Engine/Core/Public/Nenuphar/: Core.hpp
Source/Engine/Core/Public/Nenuphar/Core/: Core.hpp  Debug.hpp  Engine.hpp  LoopEngine.hpp  Platform.hpp  RunnableEngineInterface.hpp  Windows.hpp
Source/Engine/Entity/: CMakeLists.txt
Source/Engine/Entity/Private/Nenuphar/Entity/: Entity.cpp  EntityRegistry.cpp  MemoryComponentSector.cpp
Source/Engine/Entity/Public/Nenuphar/Entity/: ComponentBuffer.hpp  ComponentTI.hpp  Entity.hpp  EntityBinding.hpp  EntityRegistry.hpp  MemoryComponentSector.hpp
Source/Engine/Entity/Test/: EntityTest.cpp
Source/Engine/EventSystem/: CMakeLists.txt
Source/Engine/EventSystem/Private/Nenuphar/EventSystem/: EventSystem.cpp  Signal.cpp
Source/Engine/EventSystem/Public/Nenuphar/: EventSystem.hpp
Source/Engine/EventSystem/Public/Nenuphar/EventSystem/: Delegate.hpp  Event.hpp  EventBus.hpp  EventSystem.hpp  Signal.hpp  WindowEventHandler.hpp
Source/Engine/EventSystem/Test/: EventTest.cpp
Source/Engine/Graphics/: CMakeLists.txt
Source/Engine/Graphics/Private/Nenuphar/Graphics/: GraphicContext.cpp  Mesh.cpp  Renderer.cpp
Source/Engine/Graphics/Public/Nenuphar/Graphics/: Frame.hpp  GraphicContext.hpp  Material.hpp  Mesh.hpp
Source/Engine/InputSystem/: CMakeLists.txt
Source/Engine/InputSystem/Private/: InputSystem.cpp
Source/Engine/InputSystem/Private/Nenuphar/InputSystem/: Event.cpp  InputSystem.cpp
Source/Engine/InputSystem/Public/Nenuphar/InputSystem/: Button.hpp  Event.hpp  InputSystem.hpp  Key.hpp
Source/Engine/Math/: CMakeLists.txt
Source/Engine/Math/Private/: Math.cpp  Matrix4.inl  Vector2.inl  Vector3.inl  Vector4.inl
Source/Engine/Math/Private/Nenuphar/Math/: Camera.cpp  Math.cpp  Quartenion.cpp
Source/Engine/Math/Public/Nenuphar/Math/: Camera.hpp  CommonMath.hpp  Math.hpp  Matrix3.hpp  Matrix3.inl  Matrix4.hpp  Matrix4.inl  Quaternion.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
Source/Engine/Math/Test/: Matrix4Test.cpp  Vector4Test.cpp
Source/Engine/MeshLoader/: CMakeLists.txt
Source/Engine/MeshLoader/Private/Nenuphar/MeshLoader/: MeshLoader.cpp
Source/Engine/MeshLoader/Public/Nenuphar/MeshLoader/: MeshLoader.hpp
Source/Engine/Rendering/: CMakeLists.txt
Source/Engine/Rendering/Private/Nenuphar/Rendering/: GraphicContext.cpp  ImageAsset.cpp  Mesh.cpp  RenderDevice.cpp  RenderService.cpp  RenderSystem.cpp  Renderer.cpp  Texture.cpp  TextureAsset.cpp  UniformRegistry.cpp
Source/Engine/Rendering/Public/Nenuphar/Rendering/: CommandBuffer.hpp  CommandQueue.hpp  Framebuffer.hpp  GraphicContext.hpp  GraphicsContext.hpp  Image.hpp  ImageAsset.hpp  Material.hpp  Mesh.hpp  PipelineState.hpp  RenderBuffer.hpp  RenderDevice.hpp  RenderFrame.hpp  RenderHandle.hpp  RenderService.hpp  Shader.hpp  (+12 more)
Source/Engine/Rendering/Test/: Rendering.cpp
Source/Sample/Genesis/: CMakeLists.txt
Source/Sample/Genesis/Private/: Genesis.cpp  GenesisApplication.cpp
Source/Sample/Genesis/Private/Genesis/: Camera.cpp  EntryPoint.cpp  Genesis.cpp  RenderData.cpp  Transform.cpp
Source/Sample/Genesis/Public/Genesis/: Camera.hpp  Genesis.hpp  GenesisApplication.hpp  RenderData.hpp  Transform.hpp
Source/Sample/Noname/: CMakeLists.txt
Source/Sample/Noname/Private/: Noname.cpp
Source/Sample/Noname/Public/Noname/: Noname.hpp
Source/Samples/Genesis/: CMakeLists.txt
Source/Samples/Genesis/Private/Genesis/: Camera.cpp  EntryPoint.cpp  Genesis.cpp  RenderData.cpp  Transform.cpp
Source/Samples/Genesis/Public/Genesis/: Camera.hpp  Genesis.hpp  GenesisApplicationMessageHandler.hpp  RenderData.hpp  Transform.hpp  WindowEventHandler.hpp
(+167 files in other folders)
